# rmath

./: Cargo.toml  README.md
src/: aggregate.rs  animation.rs  easing.rs  geometry.rs  hyperbolic.rs  lambert_w.rs  lib.rs  logarithmic.rs  main.rs  noise.rs  number_theory.rs  power.rs  rounding.rs  sequences.rs  special.rs  trigonometric.rs  waves.rs
tests/: aggregate.rs  animation.rs  easing.rs  geometry.rs  hyperbolic.rs  lambert_w.rs  logarithmic.rs  noise.rs  number_theory.rs  power.rs  rounding.rs  sequences.rs  special.rs  trigonometric.rs  waves.rs
