[package]
name = "rmath"
version = "0.1.0"
edition = "2021"
authors = ["Artsiom Yafremau <aplefull@gmail.com>"]
description = "A small mathematics library with trigonometric, hyperbolic, power, logarithmic, and special functions"
license = "MIT"
repository = "https://github.com/aplefull/rmath"
keywords = ["math", "mathematics", "numerics"]
categories = ["mathematics", "algorithms"]

[[bin]]
name = "plotter"
path = "src/main.rs"

[lib]
name = "rmath"
path = "src/lib.rs"

[dependencies]
macroquad = "0.3"
egui = "0.21"
egui-macroquad = "0.14"

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
